--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.16.4"
+        "express": "^4.18.2",
+        "fs": "^0.0.1-security",
+        "path": "^0.12.7",
+        "require": "^0.4.4",
+        "util": "^0.12.5",
+        "utils": "^0.2.2",
+        "uuid": "^9.0.0"
     }
-  }
-  
+}
