--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "util": "^0.12.5",
         "utils": "^0.2.2",
         "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "webpack": "^5.85.1"
     }
 }
