--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "webpack": "^5.85.1"
+        "webpack": "^5.85.1",
+        "webpack-cli": "^5.1.3"
     }
 }
