--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
+        "express-list-endpoints": "^6.0.0",
         "fs": "^0.0.1-security",
         "path": "^0.12.7",
         "require": "^0.4.4",
