--- a/package.json
+++ b/package.json
@@ -4,27 +4,21 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "webpack --config webpack.config.js"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.18.2",
-      "express-list-endpoints": "^6.0.0",
-      "fs": "^0.0.1-security",
-      "path": "^0.12.7",
-      "require": "^0.4.4",
-      "util": "^0.12.5",
-      "utils": "^0.2.2",
-      "uuid": "^9.0.0"
-    },
-    "devDependencies": {
-      "webpack": "^5.85.1",
-      "webpack-cli": "^5.1.3"
+        "express": "^4.18.2",
+        "express-list-endpoints": "^6.0.0",
+        "fs": "^0.0.1-security",
+        "path": "^0.12.7",
+        "require": "^0.4.4",
+        "util": "^0.12.5",
+        "utils": "^0.2.2",
+        "uuid": "^9.0.0"
     },
     "engines": {
-      "node": "16.18.0"
+        "node": "16.18.0"
     }
-  }
-  
+}
